# ESP32S3

01-boot_key/: CMakeLists.txt
01-boot_key/main/: main.c
02-attitude/: CMakeLists.txt  sdkconfig.defaults
02-attitude/main/: esp32_s3_szp.c  main.c  (+1 more)
03-micro_sd/: CMakeLists.txt  sdkconfig.defaults
04-audio_es7210/: CMakeLists.txt
05-audio_es8311/: CMakeLists.txt
06-lcd/: CMakeLists.txt  sdkconfig.defaults
07-lcd_camera/: CMakeLists.txt  sdkconfig.defaults
08-lcd_lvgl/: sdkconfig.defaults
09-wifi_scan_connect/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
10-ble_hid_device/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
10-ble_hid_device/main/: CMakeLists.txt  ble_hidd_demo.c  ble_hidd_demo.h  esp32_s3_szp.h  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hidd_le_prf_int.h  idf_component.yml  main.c
11-mp3_player/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
12-speech_recognition/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
13-human_face_detection/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
14-handheld/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
14-handheld/main/: CMakeLists.txt  app_ui.c  app_ui.h  esp32_s3_szp.c  esp32_s3_szp.h  idf_component.yml  main.c  sword.pcm
14-handheld/main/assets/: image_lckfb_logo.c  img_att_icon.c  img_btset_icon.c  img_camera_icon.c  img_music_icon.c  img_sd_icon.c  img_wifiset_icon.c
14-handheld/main/bt/: ble_hidd_demo.c  ble_hidd_demo.h  esp_hidd_prf_api.c  hid_dev.c  hid_dev.h  hid_device_le_prf.c
hello_world/: sdkconfig  sdkconfig.old
lcd_camera/: CMakeLists.txt
(+52 files in other folders)
